fixes width overflow

--- a/src/components/App/styles.module.css
+++ b/src/components/App/styles.module.css
@@ -1,6 +1,6 @@
 .app {
+  box-sizing: border-box;
+  padding: 1rem;
   display: grid;
   height: 100%;
-  max-width: 50rem;
-  margin: 0 auto;
 }
