--- a/src/components/Slider/styles.module.css
+++ b/src/components/Slider/styles.module.css
@@ -11,17 +11,15 @@
 }
 
 .slider[type='range']::-webkit-slider-thumb {
-  background: #444;
-  border-radius: 2rem;
-  display: inline-block;
-  height: 4rem;
-  width: 4rem;
+  background: red;
+  border-radius: 1rem;
+  width: 2rem;
+  height: 2rem;
 }
 
 .slider[type='range'] {
   background: #eee;
-  border-radius: 1rem;
-  height: 2rem;
-  outline: none;
+  height: 1rem;
   width: 100%;
+  outline: none;
 }
